--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="C:/Users/marti/git/TPJava/TPJavaNotebook/log4j-core-2.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/marti/git/TPJava/TPJavaNotebook/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/marti/Downloads/rs2xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
